# retix

./: .gitignore  CHANGELOG.md  LICENSE  PARETO_ANALYSIS.md  README.md  TESTING_LOG.md  benchmark_results.json  benchmark_tokens_resolution.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish.yml
retix/: __init__.py  benchmarking.py  bootstrap.py  config.py  daemon_server.py  guardrails.py  image_preprocessing.py  inference.py  main.py  model_management.py  path_utils.py  project_config.py  safety_checks.py  skill_generator.py
tests/: __init__.py  test_config.py  test_guardrails.py  test_inference_registry.py  test_main.py  test_path_utils.py  test_skill_generator.py
tests/real_world/: __init__.py  test_inference_real_world.py
